tests/testFiles/semanticErrors/reinitializevariable.meme
ermahgerd lolz = 10;
ermahgerd lolz = "hi";
